test/ingress_test.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-labs-lpi
  namespace: wordpress-test
  annotations:
    # This annotation meshes with “our” nginx controller, which is
    # configured to accept snippets and put them into nginx.conf via a
    # Golang template. (The “normal” nginx controller has snippets
    # turned off, for security and robustness reasons.)
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location = /labs/lpi/wp-admin {
        return 301 https://wpn.fsd.team/labs/lpi/wp-admin/;
      }
      
      location ~ ^[^.]*$ {
        fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
      }
      location ~ \.php$ {
        fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
      }
      
      location ~ (wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/ {
        rewrite .*/((wp-includes|wp-admin|wp-content/(plugins|mu-plugins|themes))/.*) /$1 break;
        root /wp/6/;
      }
      
      location ~ (wp-content/uploads)/ {
        rewrite .*/(wp-content/uploads/(.*)) /$2 break;
        root /data/www-labs-lpi/uploads/;
      }
      
      fastcgi_param SCRIPT_FILENAME /wp/nginx-entrypoint/nginx-entrypoint.php;
      
      fastcgi_param WP_DEBUG           true;
      fastcgi_param WP_ROOT_URI        /labs/lpi/;
      fastcgi_param WP_SITE_NAME       www-labs-lpi;
      fastcgi_param WP_ABSPATH         /wp/6/;
      fastcgi_param WP_DB_HOST         mariadb-min;
      fastcgi_param WP_DB_NAME         wp-db-www-labs-lpi;
      fastcgi_param WP_DB_USER         wp-db-user-www-labs-lpi;
      fastcgi_param WP_DB_PASSWORD     secret;
      
      fastcgi_param QUERY_STRING       $query_string;
      fastcgi_param REQUEST_METHOD     $request_method;
      fastcgi_param REQUEST_SCHEME     $scheme;
      fastcgi_param CONTENT_TYPE       $content_type;
      fastcgi_param CONTENT_LENGTH     $content_length;
      
      fastcgi_param REQUEST_URI        $request_uri;
      fastcgi_param DOCUMENT_URI       $document_uri;
      fastcgi_param SERVER_PROTOCOL    $server_protocol;
      fastcgi_param HTTPS              on;
      
      fastcgi_param SERVER_SOFTWARE    nginx/$nginx_version;
      
      fastcgi_param REMOTE_ADDR        $remote_addr;
      fastcgi_param REMOTE_PORT        $remote_port;
      fastcgi_param SERVER_ADDR        $server_addr;
      fastcgi_param SERVER_PORT        $server_port;
      fastcgi_param SERVER_NAME        $server_name;
      
      fastcgi_param REDIRECT_STATUS 200;
      fastcgi_param HTTP_PROXY      '';


spec:
  ingressClassName: wordpress
  rules:
    - host: "wpn.fsd.team"
      http:
        paths:
          - pathType: Prefix
            path: /labs/lpi
            backend:
              service:
                name: wpn-nginx-service
                port:
                  number: 80
